add boot installation